@@ -1,4 +1,6 @@
 * Current version
+** [2021-02-13 Sat 13:29]: creating (weighted) covering BDD with arbitrary overlap penalties
+** [2021-02-13 Sat 13:04]: implemented (unweighted) covering BDD for arbitrary g(·) 
 ** [2021-02-12 Fri 21:58]: implemented weighted BDD generation for UFL (no overlap penalty)
 ** [2021-02-12 Fri 16:41]: added weights to BDD class
 ** [2021-02-12 Fri 16:04]: tested BDD 2 MIP with a pair of (unweighted) BDDs (passed)
